@@ -1,5 +1,7 @@
 Changes for 1.0beta9:
 
+ - added support for disk_read_opsX[*],disk_write_opsX[*],disk_read_blksX[*],
+ disk_write_blksX[*] (Alexei)
  - added basice support of monitoring of disk stats (Alexei)
  - session cookie will expire wneh session is closed (Alexei)
  - fixed situation when large SNMP values becomes nagative (Alexei) 
